--- a/core/home/templates/index.html
+++ b/core/home/templates/index.html
@@ -67,7 +67,7 @@
         <h2 class="heading">About <span>Me</span></h2>
 
         <div class="about-img">
-            <img src="img/Faiz-bagwan.png" alt="Faiz Bagwan">
+            <img src="/static/img/Faiz-bagwan.png" alt="Faiz Bagwan">
             <span class="circle-spin"></span>
         </div>
         <div class="about-cotent">
